virt01/manual/tools/stepifi/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: stepifi-svc
  labels:
    app: stepifi
spec:
  selector:
    app: stepifi
  ports:
    - name: stepifi-http
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: stepifi-bull-board
      port: 3001
      protocol: TCP
      targetPort: 3001
