virt01/manual/tools/stepifi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stepifi-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
    - host: stepifi.k3s.nf.lab
      http:
        paths:
          - backend:
              service:
                name: stepifi-svc
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - stepifi.k3s.nf.lab
      secretName: stepifi-tls
